===NEXT
 - Storage is now process and thread-safe. Fixes issue #34. [rsamoilov - Roman Samoilov]
 - Added configuration option to force is-Windows mode for storage. Fixes issues #32, #39.
 - Added multiple Gemfiles for TravisCI. https://travis-ci.org/dougal/acts_as_indexed

===0.7.8 [14 March 2011]
 - Fixed bug with file renaming on Windows. Fixes issue #21. [gabynamiman - Gabriel Namiman]

===0.7.7 [14 November 2011]
 - Fixed bug with out-of-date indexes on Windows. Fixes issue #20. [parndt - Philip Arndt]

===0.7.6 [24th October 2011]
 - Removed support for atomic writes under Windows. Fixes issue #15.

===0.7.5 [14th October 2011]
 - Screwup fix release.

===0.7.4 [13th October 2011]
 - Default index location is now in tmp directory. [parndt - Philip Arndt]
 - Fixed a bug where namespaced models would have directory names containing colons. [ugisozols - Uģis Ozols]

===0.7.3 [3rd July 2011]
  - Support for non-default primary keys. [ttoomey - Theron Toomey]
  - Fixed issue with file-locking on JRuby. [banderso - Ben Anderson]

===0.7.2 [31st March 2011]
  - Fixed bug with ranking of records [Christopher Souvey - bug report]
  - Fixed a bug with the slicing of records before AR order is applied. [Christopher Souvey - bug report]
  - Fixed bug with slicing of id-only results.
  - Error now raised when combining ids_only with find options other than limit and offset.
  - Can now disable auto-indexing. Useful for large test suites.

===0.7.1 [22nd February 2011]
 - Removed file locking on Microsoft Windows as it is unsupported.

===0.7.0 [11th February 2011]
 - Threadsafe support. Index files are now locked for changes, and atomically written.
 - Configurable case-sensitivity.
 - Improved performance of index builds.
 - Now warns on old version of the index.
 - Upgrade instructions added to README. [ionas - Florent Guilleux]

===0.6.7 [7th February 2011]
 - find_by_index and paginate_search are no longer deprecated.
 - Improved documentation.